<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/add_proxy"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_proxy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reset_proxy"
        android:icon="@drawable/ic_baseline_block_24"
        android:title="@string/reset_proxy"
        app:showAsAction="always" />
    <item
        android:id="@+id/authorize"
        android:title="@string/authorize" />
    <item
        android:id="@+id/cat_proxy"
        android:title="@string/cat_proxy" />
    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all" />
    <item
        android:id="@+id/setting_port"
        android:title="@string/setting_port" />

</menu>